# ACM-Basic-Interpreter-2024

./: CMakeLists.txt  pressure.txt  score.cpp
Basic/: Basic.cpp  constants.hpp  errorReporter.cpp  errorReporter.hpp  evalstate.cpp  execute.cpp  execute.h  parser.cpp  program.cpp  program.hpp  safeexp.cpp  safeexp.h  statement.cpp  statement.hpp
Basic/Utils/: strlib.cpp  strlib.hpp
Bonus/Calculator/: EvalVisitor.h
Test/: advanced01.txt
